deploy/tabs-spaces/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tabs-spaces
  namespace: tabs-spaces
spec:
  selector:
    app: tabs-spaces

  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
