deploy/tabs-spaces/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tabs-spaces
  namespace: tabs-spaces
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"

spec:
  tls:
  - secretName: tabs-spaces
    hosts:
    - tabs.lab.aks-demo.com
  rules:
  - host: tabs.lab.aks-demo.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: tabs-spaces
            port:
              number: 8080
